documentation for all added

--- a/notebooks/artificial_neuralnet-SKLearn.ipynb
+++ b/notebooks/artificial_neuralnet-SKLearn.ipynb
@@ -1,18 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7702a789-bc09-4489-be4f-9d255731e6de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda activate surya"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d4f59405-280e-4116-9441-0eb214b88912",
    "metadata": {
     "id": "d4f59405-280e-4116-9441-0eb214b88912"
    },
    "source": [
-    "Let's import neccessary libraries first."
+    "# Artificial Neural Network Regressor(ANN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20efd641-7142-460f-919c-0960bc71a88d",
+   "metadata": {},
+   "source": [
+    "First necessary libraries are imported to run the main program.\n",
+    "Pandas is used for data frame creation and handling.\n",
+    "Numpy is used for numercial analysis multidimentional array handling.\n",
+    "Sci-kit learn module provides various submodules to preprocess the data, create and train the machine learning model and to test it's performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f63c28cc-bb54-45e2-a611-15d1f6d0a6cd",
    "metadata": {
     "id": "f63c28cc-bb54-45e2-a611-15d1f6d0a6cd"
@@ -20,7 +41,6 @@
    "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split"
@@ -33,12 +53,14 @@
     "id": "5f5d71f1-2da2-423d-92af-115b23e95526"
    },
    "source": [
-    "Now we will read the dataset and first split it into feature/input dataframe(X) and label/output Series(Y)."
+    "The observational dataset is imported from the csv file and saved as a pandas data frame in variable grd.\n",
+    "\n",
+    "The 1st four columns Graphene_percentage, feed, RPM and DOC were taken as input and MRR as 2st output and `Ra` as 2nd output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1544569b-365b-4951-a138-1d3f909fe4e4",
    "metadata": {
     "id": "1544569b-365b-4951-a138-1d3f909fe4e4",
@@ -60,12 +82,16 @@
     "id": "2e3fec2b-3c9d-473d-8a3d-4af02d5d9162"
    },
    "source": [
-    "Here we will split X and Y into their corresponding training and testing datasets.   "
+    "Now the input and output data are splited to form respective test and train data sets.\n",
+    "X_train is the input and Y_train is the output data set used to train the model to predict `MRR`.\n",
+    "X_test and Y_test are input and output data sets respectively those are used to test the performance of the `MRR` predictor model.\n",
+    "X_train2 is the input and Y2_train is the output data set used to train the model to predict `Ra`.\n",
+    "X_test2 and Y2_test are input and output data sets respectively those are used to test the performance of the `Ra` predictor model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b8e8de52-0a58-405f-bfc3-ad5f8724443b",
    "metadata": {
     "id": "b8e8de52-0a58-405f-bfc3-ad5f8724443b"
@@ -83,12 +109,43 @@
     "id": "32fb496a-9e73-42f9-a9e7-1ab5073915c7"
    },
    "source": [
-    "Let's build the model. We are creating a normal sequential neural network model.\n"
+    "`MLPRegressor()` function is used to initiate a neural network model object.\n",
+    "`fit` function is used to train the model using the train data sets given within them and them `score` function is used to test the performance of the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "96dabd0b-0922-4e11-9804-e0b51aa2a42d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8321575272132545"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MLPRegressor().fit(X_train,Y_train).score(X_test,Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d65c3405-7d50-4b2c-a375-1f97671efad9",
+   "metadata": {},
+   "source": [
+    "The above model is produced without any parameter tunning.\n",
+    "But, the model can be improved by hyperparameter tunning. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c6bb9206-c05c-4aad-937f-09531f5cdf2c",
    "metadata": {},
    "outputs": [],
@@ -101,17 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "cd796090-9f95-4eb1-95b6-e41102abc028",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8261890687864807"
+       "0.8355335489268952"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +179,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99b6fae1-a754-48e9-9caa-548694dcd2b9",
+   "metadata": {},
+   "source": [
+    "It can seen that the parameter tunning model performed way better than the normal model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "63683971-c9b5-4ba8-83ac-e8f8c498c238",
    "metadata": {},
    "outputs": [],
@@ -134,17 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1dac8b82-cbff-4ab4-a119-305ffa0d31a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.2221296525651495"
+       "-0.36082658279842783"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,8 +220,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f7e8164-f58f-418c-824d-743c5e4bda35",
+   "metadata": {},
+   "source": [
+    "It can seen that the test score is pretty low.Therefore, it can be concluded that the neural network is not able to find the actual relation between the input variables and surface roughnes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57198d48-d1d0-4656-9e4d-017dbf34f774",
+   "metadata": {},
+   "source": [
+    "The neural network models are now saved in pickle file format."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "EtoYes8hMFfe",
    "metadata": {
     "colab": {
@@ -195,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
