--- a/notebooks/decision_tree_regressor.ipynb
+++ b/notebooks/decision_tree_regressor.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5b03e84e-8011-44dc-b671-98404709a027",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda activate surya"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9061d7d6-3524-4fa2-a379-2165f636415e",
    "metadata": {},
@@ -13,17 +23,16 @@
    "id": "f3fe722a-1973-45dd-be55-34d4682d4323",
    "metadata": {},
    "source": [
-    "Let's first import necessary libraries.\n",
-    "Pandas is used for data frame handling.\n",
-    "Numpy is for used for numercial analysis.\n",
+    "First necessary libraries are imported to run the main program.\n",
+    "Pandas is used for data frame creation and handling.\n",
+    "Numpy is used for numercial analysis multidimentional array handling.\n",
     "Sci-kit learn module provides various submodules to preprocess the data, create and train the machine learning model and to test it's performance.\n",
-    "matplotlib is used for plotting of graphs.\n",
-    "Tensorflow module provides various submodules to preprocess the data, create and train the machine learning model and to test it's performance."
+    "Matplotlib is used for plotting of graphs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1ad2e12f-d0d5-4297-9e91-ac44b2607f2a",
    "metadata": {},
    "outputs": [],
@@ -44,12 +53,12 @@
    "id": "b552112e-8fbd-4382-9851-3384cb6dbe55",
    "metadata": {},
    "source": [
-    "Fisrt we import data from the csv file and save it as a pandas data frame in variable grd.\n"
+    "The observational dataset is imported from the csv file and saved as a pandas data frame in variable grd.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9bc435d6-d118-4d9e-84ec-4cebf8695198",
    "metadata": {},
    "outputs": [],
@@ -62,12 +71,12 @@
    "id": "5a18d3ed-ae93-4e45-a92f-8292ac0179a1",
    "metadata": {},
    "source": [
-    "We take the 1st four columns Graphene_percentage, feed, RPM and DOC as input and MRR as 2st output and `Ra` as 2nd output."
+    "The 1st four columns Graphene_percentage, feed, RPM and DOC were taken as input and MRR as 2st output and `Ra` as 2nd output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f622e1df-602f-44de-903a-2bc394e94d21",
    "metadata": {},
    "outputs": [],
@@ -81,7 +90,7 @@
    "id": "baba4524-240c-4990-83c8-a95449d06d05",
    "metadata": {},
    "source": [
-    "Now we will split the input and output data to respective test and train data sets.\n",
+    "Now the input and output data are splited to form respective test and train data sets.\n",
     "X_train is the input and Y_train is the output data set used to train the model to predict `MRR`.\n",
     "X_test and Y_test are input and output data sets respectively those are used to test the performance of the `MRR` predictor model.\n",
     "X_train2 is the input and Y2_train is the output data set used to train the model to predict `Ra`.\n",
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4ed3fe54-662b-4b03-8fda-07094bee48c3",
    "metadata": {},
    "outputs": [],
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a5f60187-daaa-4668-96b8-d0ea2b06e3d7",
    "metadata": {},
    "outputs": [
@@ -118,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8594779567262018\n"
+      "0.8600404108080119\n"
      ]
     }
    ],
@@ -133,12 +142,12 @@
    "source": [
     "The above model is produced without any parameter tunning.\n",
     "But we can improve the model by training and testing the models with various sets of multiple parameters and can get the best performing model to predict our output.\n",
-    "That's why now we create parameter grid that contains various possible values for parameters to find the best set of parameters."
+    "That's why now parameter grid is created which contains various possible values for parameters to find the best set of parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "97f11f13-b67e-45cf-a10d-95cd9f45fb08",
    "metadata": {},
    "outputs": [],
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "554da502-fa31-4f7b-91d5-f9c85027cf4a",
    "metadata": {},
    "outputs": [],
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3acabc56-a497-4d3f-8967-b466bd240aaf",
    "metadata": {},
    "outputs": [
@@ -194,7 +203,7 @@
        "                         'min_samples_split': [2, 4, 8, 12, 16]})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,12 +218,12 @@
    "id": "d8eaa50c-425a-4533-9000-9fbc8ec1aefb",
    "metadata": {},
    "source": [
-    "As we can see grid search model acts a model itself since it inherits the basic model."
+    "Here it can be seen that grid search model acts a model itself since it inherits the basic model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "96a6e08e-a9c8-4d67-8196-4f3572bdc6fd",
    "metadata": {},
    "outputs": [
@@ -224,7 +233,7 @@
        "0.8730574949203294"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,12 +247,12 @@
    "id": "914b6065-26fd-46e2-a509-66d418376e03",
    "metadata": {},
    "source": [
-    "Using gridsearch we are able to find a model that performs 2% better than the original basic model. The improvement may seem miniscule because the train data set is small and the basic model itself applies certain algorithms to find the best parameters."
+    "The gridsearch model can be seen performing better than the original basic model. The improvement may seem miniscule because the train data set is small and the basic model itself applies certain algorithms to find the best parameters. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e765be84-76c0-4b18-8d97-c5512cb96d1e",
    "metadata": {},
    "outputs": [
@@ -256,7 +265,7 @@
        " 'min_samples_split': 8}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bd30bdbf-f0b0-4a77-8ebc-6f32c804bef1",
    "metadata": {},
    "outputs": [],
@@ -285,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e74fc312-7dd0-4899-93e4-95562465a413",
    "metadata": {},
    "outputs": [
@@ -299,7 +308,7 @@
        "                         'min_samples_split': [2, 4, 8, 12, 16]})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d8ef780e-c868-4068-9817-2a5cb143d1a4",
    "metadata": {},
    "outputs": [
@@ -321,7 +330,7 @@
        "0.34724831489740293"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +344,7 @@
    "id": "6a260453-17dd-4a51-a7b7-8b4418a3c4a4",
    "metadata": {},
    "source": [
-    "As we can see the test score is pretty low, we, therefore, can conclude that the gridsearch algorithm using the decision tree model is not able to find the actual relation between the input variables and surface roughness."
+    "It can seen that the test score is pretty low.Therefore, it can be concluded that the gridsearch algorithm using the decision tree model is not able to find the actual relation between the input variables and surface roughness."
    ]
   },
   {
@@ -343,12 +352,12 @@
    "id": "967d3233-2b83-4344-889e-4366c84d281e",
    "metadata": {},
    "source": [
-    "Now let's save the best performing decision tree models as a \"Pickle\" file."
+    "The best performing decision tree models are saved in \"Pickle\" file format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4ad8e978-fcba-4acd-a452-7a04653e54b8",
    "metadata": {},
    "outputs": [],
