--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2f250832-fa16-4338-b81a-e3879fa73931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda activate surya"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "542fe965-7a20-4d16-b75a-1e78904156eb",
    "metadata": {},
@@ -736,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
